<resources>
    <string name="app_name">Tipoff</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels BARU-->
    <string name="nav_home">Home</string>
    <string name="nav_courts">Courts</string>
    <string name="nav_events">Events</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_players">Players</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Courts</item>
        <item>Events</item>
        <item>Chats</item>
        <item>Players</item>
        <item>Calendar</item>
        <item>Settings</item>
    </string-array>
    <string name="month_cal_frag">&lt;   Nov 2016 (Week 4)   &gt;</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="action_logout">Logout</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="Players">
        <item>andre</item>
        <item>Stephen Curry</item>
        <item>Kobe Bryant</item>
        <item>anas</item>
        <item>Arki Wisnu</item>
        <item>Denny Sumargo</item>
        <item>Daniel Wenas</item>
        <item>Nden</item>
        <item>Fajar Satria</item>
        <item>Coach Ivan (Cipuy)</item>
        <item>Ivan Alexander</item>
        <item>Harits Muhammad</item>
    </string-array>

</resources>
